chore: 移除已弃用的 Rust 服务器和 Minio starter 模块
- 删除 Rust 服务器相关的二进制文件（DLL、SO、EXE）和 Cargo 配置
- 移除独立的 `spring-support-minio-starter` 模块，其功能已整合
- 清理 Rust 服务器 starter 中已扁平化的 POM 文件