@@ -1,10 +1,16 @@
 package com.chua.starter.ai.support.service.impl;
 
-import com.chua.common.support.spi.ServiceProvider;
-import com.chua.deeplearning.support.ml.*;
-import com.chua.deeplearning.support.ml.detector.Detector;
-import com.chua.deeplearning.support.ml.feature.Feature;
-import com.chua.deeplearning.support.ml.function.*;
+import com.chua.common.support.core.utils.ServiceProvider;
+import com.chua.deeplearning.support.core.function.api.Detector;
+import com.chua.deeplearning.support.core.function.api.Feature;
+import com.chua.deeplearning.support.core.result.DetectorPredictResult;
+import com.chua.deeplearning.support.core.result.HumanPredictResult;
+import com.chua.deeplearning.support.core.result.PredictResult;
+import com.chua.deeplearning.support.core.result.PredictResultObject;
+import com.chua.deeplearning.support.ml.face.api.FaceDetector;
+import com.chua.deeplearning.support.ml.face.api.FaceFeature;
+import com.chua.deeplearning.support.ml.ocr.api.OcrRecognizer;
+import com.chua.deeplearning.support.ml.ocr.model.OcrResult;
 import com.chua.starter.ai.support.model.*;
 import com.chua.starter.ai.support.properties.AiProperties;
 import com.chua.starter.ai.support.service.AiService;
@@ -32,27 +38,67 @@ public class DefaultAiService implements AiService {
 
     private final AiProperties aiProperties;
     
-    // 深度学习检测器实例
+    /**
+     * 人脸检测器实例
+     */
     private volatile FaceDetector faceDetector;
+    
+    /**
+     * 人脸特征提取器实例
+     */
     private volatile FaceFeature faceFeature;
-    private volatile ImageDetector imageDetector;
-    private volatile ImageFeature imageFeature;
-    private volatile TextFeature textFeature;
-    private volatile OcrDetector ocrDetector;
+    
+    /**
+     * 图像检测器实例
+     */
+    private volatile Detector imageDetector;
+    
+    /**
+     * 图像特征提取器实例
+     */
+    private volatile Feature imageFeature;
+    
+    /**
+     * 文本特征提取器实例
+     */
+    private volatile Feature textFeature;
+    
+    /**
+     * OCR识别器实例
+     */
+    private volatile OcrRecognizer ocrRecognizer;
+    
+    /**
+     * 版面分析检测器实例
+     */
     private volatile Detector layoutDetector;
+    
+    /**
+     * 性别年龄检测器实例
+     */
     private volatile Detector genderAgeDetector;
 
+    /**
+     * 构造函数
+     *
+     * @param aiProperties AI配置属性
+     */
     public DefaultAiService(AiProperties aiProperties) {
         this.aiProperties = aiProperties;
     }
 
     // ==================== 获取检测器实例 ====================
 
+    /**
+     * 获取人脸检测器实例（懒加载）
+     *
+     * @return 人脸检测器
+     */
     private FaceDetector getFaceDetector() {
         if (faceDetector == null) {
             synchronized (this) {
                 if (faceDetector == null) {
-                    String provider = aiProperties.getFaceDetection().getProvider();
+                    var provider = aiProperties.getFaceDetection().getProvider();
                     faceDetector = ServiceProvider.of(FaceDetector.class).getNewExtension(provider);
                 }
             }
@@ -60,11 +106,16 @@ public class DefaultAiService implements AiService {
         return faceDetector;
     }
 
+    /**
+     * 获取人脸特征提取器实例（懒加载）
+     *
+     * @return 人脸特征提取器
+     */
     private FaceFeature getFaceFeature() {
         if (faceFeature == null) {
             synchronized (this) {
                 if (faceFeature == null) {
-                    String provider = aiProperties.getFaceDetection().getProvider();
+                    var provider = aiProperties.getFaceDetection().getProvider();
                     faceFeature = ServiceProvider.of(FaceFeature.class).getNewExtension(provider);
                 }
             }
@@ -72,59 +123,84 @@ public class DefaultAiService implements AiService {
         return faceFeature;
     }
 
-    private ImageDetector getImageDetector() {
+    /**
+     * 获取图像检测器实例（懒加载）
+     *
+     * @return 图像检测器
+     */
+    private Detector getImageDetector() {
         if (imageDetector == null) {
             synchronized (this) {
                 if (imageDetector == null) {
-                    String provider = aiProperties.getImage().getProvider();
-                    imageDetector = ServiceProvider.of(ImageDetector.class).getNewExtension(provider);
+                    var provider = aiProperties.getImage().getProvider();
+                    imageDetector = ServiceProvider.of(Detector.class).getNewExtension("image-" + provider);
                 }
             }
         }
         return imageDetector;
     }
 
-    private ImageFeature getImageFeature() {
+    /**
+     * 获取图像特征提取器实例（懒加载）
+     *
+     * @return 图像特征提取器
+     */
+    private Feature getImageFeature() {
         if (imageFeature == null) {
             synchronized (this) {
                 if (imageFeature == null) {
-                    String provider = aiProperties.getImage().getProvider();
-                    imageFeature = ServiceProvider.of(ImageFeature.class).getNewExtension(provider);
+                    var provider = aiProperties.getImage().getProvider();
+                    imageFeature = ServiceProvider.of(Feature.class).getNewExtension("image-" + provider);
                 }
             }
         }
         return imageFeature;
     }
 
-    private TextFeature getTextFeature() {
+    /**
+     * 获取文本特征提取器实例（懒加载）
+     *
+     * @return 文本特征提取器
+     */
+    private Feature getTextFeature() {
         if (textFeature == null) {
             synchronized (this) {
                 if (textFeature == null) {
-                    String provider = aiProperties.getText().getProvider();
-                    textFeature = ServiceProvider.of(TextFeature.class).getNewExtension(provider);
+                    var provider = aiProperties.getText().getProvider();
+                    textFeature = ServiceProvider.of(Feature.class).getNewExtension("text-" + provider);
                 }
             }
         }
         return textFeature;
     }
 
-    private OcrDetector getOcrDetector() {
-        if (ocrDetector == null) {
+    /**
+     * 获取OCR识别器实例（懒加载）
+     *
+     * @return OCR识别器
+     */
+    private OcrRecognizer getOcrRecognizer() {
+        if (ocrRecognizer == null) {
             synchronized (this) {
-                if (ocrDetector == null) {
-                    String provider = aiProperties.getOcr().getProvider();
-                    ocrDetector = ServiceProvider.of(OcrDetector.class).getNewExtension(provider);
+                if (ocrRecognizer == null) {
+                    var provider = aiProperties.getOcr().getProvider();
+                    ocrRecognizer = ServiceProvider.of(OcrRecognizer.class).getNewExtension(provider);
                 }
             }
         }
-        return ocrDetector;
+        return ocrRecognizer;
     }
 
+    /**
+     * 获取版面分析检测器实例（懒加载）
+     *
+     * @return 版面分析检测器
+     */
     private Detector getLayoutDetector() {
         if (layoutDetector == null) {
             synchronized (this) {
                 if (layoutDetector == null) {
-                    String provider = aiProperties.getImage().getProvider();
+                    var provider = aiProperties.getImage().getProvider();
                     layoutDetector = ServiceProvider.of(Detector.class).getNewExtension("layout-" + provider);
                 }
             }
@@ -132,11 +208,16 @@ public class DefaultAiService implements AiService {
         return layoutDetector;
     }
 
+    /**
+     * 获取性别年龄检测器实例（懒加载）
+     *
+     * @return 性别年龄检测器
+     */
     private Detector getGenderAgeDetector() {
         if (genderAgeDetector == null) {
             synchronized (this) {
                 if (genderAgeDetector == null) {
-                    String provider = aiProperties.getFaceDetection().getProvider();
+                    var provider = aiProperties.getFaceDetection().getProvider();
                     genderAgeDetector = ServiceProvider.of(Detector.class).getNewExtension("genderAge-" + provider);
                 }
             }
@@ -152,25 +233,28 @@ public class DefaultAiService implements AiService {
             return FaceDetectionResult.fail("Face detection is disabled");
         }
 
-        long startTime = System.currentTimeMillis();
+        var startTime = System.currentTimeMillis();
         try {
-            FaceDetector detector = getFaceDetector();
+            var detector = getFaceDetector();
             if (detector == null) {
                 return FaceDetectionResult.fail("FaceDetector not available");
             }
 
-            PredictResultObject<PredictResult> result = detector.predict(imageData);
-            List<FaceDetectionResult.Face> faces = convertToFaces(result);
+            var result = detector.detect(imageData);
+            var faces = convertToFaces(result);
             
             return FaceDetectionResult.success(faces, System.currentTimeMillis() - startTime);
         } catch (Exception e) {
-            log.error("Face detection failed", e);
+            log.error("[AI][人脸检测]检测失败", e);
             return FaceDetectionResult.fail(e.getMessage());
         }
     }
 
     /**
      * 转换检测结果为人脸列表
+     *
+     * @param result 预测结果
+     * @return 人脸列表
      */
     private List<FaceDetectionResult.Face> convertToFaces(PredictResultObject<PredictResult> result) {
         if (result == null || result.isEmpty()) {
@@ -178,11 +262,11 @@ public class DefaultAiService implements AiService {
         }
 
         List<FaceDetectionResult.Face> faces = new ArrayList<>();
-        for (PredictResult predictResult : result.getList()) {
+        for (var predictResult : result.getList()) {
             if (predictResult instanceof DetectorPredictResult detectorResult) {
                 var boundingBox = detectorResult.getBoundingBox();
                 if (boundingBox != null && boundingBox.getCorners() != null && !boundingBox.getCorners().isEmpty()) {
-                    var topLeft = boundingBox.getCorners().get(0);
+                    var topLeft = boundingBox.getCorners().getFirst();
                     faces.add(FaceDetectionResult.Face.builder()
                             .x((int) topLeft.getX())
                             .y((int) topLeft.getY())
@@ -199,10 +283,10 @@ public class DefaultAiService implements AiService {
     @Override
     public FaceDetectionResult detectFaces(File imageFile) {
         try {
-            byte[] imageData = Files.readAllBytes(imageFile.toPath());
+            var imageData = Files.readAllBytes(imageFile.toPath());
             return detectFaces(imageData);
         } catch (IOException e) {
-            log.error("Failed to read image file: {}", imageFile.getAbsolutePath(), e);
+            log.error("[AI][人脸检测]读取文件失败: {}", imageFile.getAbsolutePath(), e);
             return FaceDetectionResult.fail("Failed to read image file: " + e.getMessage());
         }
     }
@@ -210,10 +294,10 @@ public class DefaultAiService implements AiService {
     @Override
     public FaceDetectionResult detectFaces(InputStream inputStream) {
         try {
-            byte[] imageData = toByteArray(inputStream);
+            var imageData = toByteArray(inputStream);
             return detectFaces(imageData);
         } catch (IOException e) {
-            log.error("Failed to read image from input stream", e);
+            log.error("[AI][人脸检测]读取输入流失败", e);
             return FaceDetectionResult.fail("Failed to read image from input stream: " + e.getMessage());
         }
     }
@@ -224,17 +308,17 @@ public class DefaultAiService implements AiService {
             return FeatureResult.fail("Face feature extraction is disabled");
         }
 
-        long startTime = System.currentTimeMillis();
+        var startTime = System.currentTimeMillis();
         try {
-            FaceFeature feature = getFaceFeature();
+            var feature = getFaceFeature();
             if (feature == null) {
                 return FeatureResult.fail("FaceFeature not available");
             }
 
-            float[] featureValue = feature.feature(imageData);
+            var featureValue = feature.feature(imageData);
             return FeatureResult.success(featureValue, System.currentTimeMillis() - startTime);
         } catch (Exception e) {
-            log.error("Face feature extraction failed", e);
+            log.error("[AI][人脸特征]特征提取失败", e);
             return FeatureResult.fail(e.getMessage());
         }
     }
@@ -242,10 +326,10 @@ public class DefaultAiService implements AiService {
     @Override
     public FeatureResult extractFaceFeature(File imageFile) {
         try {
-            byte[] imageData = Files.readAllBytes(imageFile.toPath());
+            var imageData = Files.readAllBytes(imageFile.toPath());
             return extractFaceFeature(imageData);
         } catch (IOException e) {
-            log.error("Failed to read image file: {}", imageFile.getAbsolutePath(), e);
+            log.error("[AI][人脸特征]读取文件失败: {}", imageFile.getAbsolutePath(), e);
             return FeatureResult.fail("Failed to read image file: " + e.getMessage());
         }
     }
@@ -256,25 +340,28 @@ public class DefaultAiService implements AiService {
             return GenderAgeResult.fail("Gender age detection is disabled");
         }
 
-        long startTime = System.currentTimeMillis();
+        var startTime = System.currentTimeMillis();
         try {
-            Detector detector = getGenderAgeDetector();
+            var detector = getGenderAgeDetector();
             if (detector == null) {
                 return GenderAgeResult.fail("GenderAgeDetector not available");
             }
 
-            PredictResultObject<PredictResult> result = detector.predict(imageData);
-            List<GenderAgeResult.GenderAge> genderAges = convertToGenderAge(result);
+            var result = detector.detect(imageData);
+            var genderAges = convertToGenderAge(result);
             
             return GenderAgeResult.success(genderAges, System.currentTimeMillis() - startTime);
         } catch (Exception e) {
-            log.error("Gender age detection failed", e);
+            log.error("[AI][性别年龄]检测失败", e);
             return GenderAgeResult.fail(e.getMessage());
         }
     }
 
     /**
      * 转换检测结果为性别年龄列表
+     *
+     * @param result 预测结果
+     * @return 性别年龄列表
      */
     private List<GenderAgeResult.GenderAge> convertToGenderAge(PredictResultObject<PredictResult> result) {
         if (result == null || result.isEmpty()) {
@@ -282,32 +369,44 @@ public class DefaultAiService implements AiService {
         }
 
         List<GenderAgeResult.GenderAge> genderAges = new ArrayList<>();
-        for (PredictResult predictResult : result.getList()) {
-            if (predictResult instanceof GenderPredictResult genderResult) {
-                GenderAgeResult.Gender gender = "Male".equalsIgnoreCase(genderResult.getGender()) || "男".equals(genderResult.getGender())
-                        ? GenderAgeResult.Gender.MALE
-                        : "Female".equalsIgnoreCase(genderResult.getGender()) || "女".equals(genderResult.getGender())
-                        ? GenderAgeResult.Gender.FEMALE
-                        : GenderAgeResult.Gender.UNKNOWN;
-
+        for (var predictResult : result.getList()) {
+            if (predictResult instanceof HumanPredictResult humanResult) {
+                var gender = parseGender(humanResult.getGender());
                 genderAges.add(GenderAgeResult.GenderAge.builder()
                         .gender(gender)
-                        .genderConfidence((float) genderResult.getConfidence())
-                        .age(genderResult.getAge())
-                        .ageConfidence((float) genderResult.getConfidence())
+                        .genderConfidence(humanResult.getGenderConfidence())
+                        .age(humanResult.getAge())
+                        .ageConfidence(humanResult.getAgeConfidence())
                         .build());
             }
         }
         return genderAges;
     }
 
+    /**
+     * 解析性别字符串
+     *
+     * @param genderStr 性别字符串
+     * @return 性别枚举
+     */
+    private GenderAgeResult.Gender parseGender(String genderStr) {
+        if (genderStr == null) {
+            return GenderAgeResult.Gender.UNKNOWN;
+        }
+        return switch (genderStr.toLowerCase()) {
+            case "male", "男", "m" -> GenderAgeResult.Gender.MALE;
+            case "female", "女", "f" -> GenderAgeResult.Gender.FEMALE;
+            default -> GenderAgeResult.Gender.UNKNOWN;
+        };
+    }
+
     @Override
     public GenderAgeResult detectGenderAge(File imageFile) {
         try {
-            byte[] imageData = Files.readAllBytes(imageFile.toPath());
+            var imageData = Files.readAllBytes(imageFile.toPath());
             return detectGenderAge(imageData);
         } catch (IOException e) {
-            log.error("Failed to read image file: {}", imageFile.getAbsolutePath(), e);
+            log.error("[AI][性别年龄]读取文件失败: {}", imageFile.getAbsolutePath(), e);
             return GenderAgeResult.fail("Failed to read image file: " + e.getMessage());
         }
     }
@@ -320,25 +419,28 @@ public class DefaultAiService implements AiService {
             return ImageDetectionResult.fail("Image detection is disabled");
         }
 
-        long startTime = System.currentTimeMillis();
+        var startTime = System.currentTimeMillis();
         try {
-            ImageDetector detector = getImageDetector();
+            var detector = getImageDetector();
             if (detector == null) {
                 return ImageDetectionResult.fail("ImageDetector not available");
             }
 
-            PredictResultObject<PredictResult> result = detector.predict(imageData);
-            List<ImageDetectionResult.DetectedObject> objects = convertToDetectedObjects(result);
+            var result = detector.detect(imageData);
+            var objects = convertToDetectedObjects(result);
             
             return ImageDetectionResult.success(objects, System.currentTimeMillis() - startTime);
         } catch (Exception e) {
-            log.error("Image detection failed", e);
+            log.error("[AI][图像检测]检测失败", e);
             return ImageDetectionResult.fail(e.getMessage());
         }
     }
 
     /**
      * 转换检测结果为物体列表
+     *
+     * @param result 预测结果
+     * @return 检测物体列表
      */
     private List<ImageDetectionResult.DetectedObject> convertToDetectedObjects(PredictResultObject<PredictResult> result) {
         if (result == null || result.isEmpty()) {
@@ -346,11 +448,11 @@ public class DefaultAiService implements AiService {
         }
 
         List<ImageDetectionResult.DetectedObject> objects = new ArrayList<>();
-        for (PredictResult predictResult : result.getList()) {
+        for (var predictResult : result.getList()) {
             if (predictResult instanceof DetectorPredictResult detectorResult) {
                 var boundingBox = detectorResult.getBoundingBox();
                 if (boundingBox != null && boundingBox.getCorners() != null && !boundingBox.getCorners().isEmpty()) {
-                    var topLeft = boundingBox.getCorners().get(0);
+                    var topLeft = boundingBox.getCorners().getFirst();
                     objects.add(ImageDetectionResult.DetectedObject.builder()
                             .className(detectorResult.getClassId())
                             .confidence((float) detectorResult.getConfidence())
@@ -368,10 +470,10 @@ public class DefaultAiService implements AiService {
     @Override
     public ImageDetectionResult detectImage(File imageFile) {
         try {
-            byte[] imageData = Files.readAllBytes(imageFile.toPath());
+            var imageData = Files.readAllBytes(imageFile.toPath());
             return detectImage(imageData);
         } catch (IOException e) {
-            log.error("Failed to read image file: {}", imageFile.getAbsolutePath(), e);
+            log.error("[AI][图像检测]读取文件失败: {}", imageFile.getAbsolutePath(), e);
             return ImageDetectionResult.fail("Failed to read image file: " + e.getMessage());
         }
     }
@@ -382,17 +484,18 @@ public class DefaultAiService implements AiService {
             return FeatureResult.fail("Image feature extraction is disabled");
         }
 
-        long startTime = System.currentTimeMillis();
+        var startTime = System.currentTimeMillis();
         try {
-            ImageFeature feature = getImageFeature();
+            var feature = getImageFeature();
             if (feature == null) {
                 return FeatureResult.fail("ImageFeature not available");
             }
 
-            float[] featureValue = feature.feature(imageData);
+            var predictResult = feature.extract(imageData);
+            var featureValue = predictResult != null ? predictResult.asFloatArray() : null;
             return FeatureResult.success(featureValue, System.currentTimeMillis() - startTime);
         } catch (Exception e) {
-            log.error("Image feature extraction failed", e);
+            log.error("[AI][图像特征]特征提取失败", e);
             return FeatureResult.fail(e.getMessage());
         }
     }
@@ -400,10 +503,10 @@ public class DefaultAiService implements AiService {
     @Override
     public FeatureResult extractImageFeature(File imageFile) {
         try {
-            byte[] imageData = Files.readAllBytes(imageFile.toPath());
+            var imageData = Files.readAllBytes(imageFile.toPath());
             return extractImageFeature(imageData);
         } catch (IOException e) {
-            log.error("Failed to read image file: {}", imageFile.getAbsolutePath(), e);
+            log.error("[AI][图像特征]读取文件失败: {}", imageFile.getAbsolutePath(), e);
             return FeatureResult.fail("Failed to read image file: " + e.getMessage());
         }
     }
@@ -416,17 +519,18 @@ public class DefaultAiService implements AiService {
             return FeatureResult.fail("Text feature extraction is disabled");
         }
 
-        long startTime = System.currentTimeMillis();
+        var startTime = System.currentTimeMillis();
         try {
-            TextFeature feature = getTextFeature();
+            var feature = getTextFeature();
             if (feature == null) {
                 return FeatureResult.fail("TextFeature not available");
             }
 
-            float[] featureValue = feature.feature(text);
+            var predictResult = feature.extract(text);
+            var featureValue = predictResult != null ? predictResult.asFloatArray() : null;
             return FeatureResult.success(featureValue, System.currentTimeMillis() - startTime);
         } catch (Exception e) {
-            log.error("Text feature extraction failed", e);
+            log.error("[AI][文本特征]特征提取失败", e);
             return FeatureResult.fail(e.getMessage());
         }
     }
@@ -434,68 +538,69 @@ public class DefaultAiService implements AiService {
     // ==================== OCR相关 ====================
 
     @Override
-    public OcrResult ocr(byte[] imageData) {
+    public com.chua.starter.ai.support.model.OcrResult ocr(byte[] imageData) {
         if (!aiProperties.isEnabled() || !aiProperties.getOcr().isEnabled()) {
-            return OcrResult.fail("OCR is disabled");
+            return com.chua.starter.ai.support.model.OcrResult.fail("OCR is disabled");
         }
 
-        long startTime = System.currentTimeMillis();
+        var startTime = System.currentTimeMillis();
         try {
-            OcrDetector detector = getOcrDetector();
-            if (detector == null) {
-                return OcrResult.fail("OcrDetector not available");
+            var recognizer = getOcrRecognizer();
+            if (recognizer == null) {
+                return com.chua.starter.ai.support.model.OcrResult.fail("OcrRecognizer not available");
             }
 
-            String fullText = detector.getText(imageData);
-            PredictResultObject<PredictResult> result = detector.predict(imageData);
-            List<OcrResult.TextLine> textLines = convertToTextLines(result);
+            var fullText = recognizer.getText(imageData);
+            var results = recognizer.recognizeAll(imageData);
+            var textLines = convertToTextLines(results);
             
-            return OcrResult.success(fullText, textLines, System.currentTimeMillis() - startTime);
+            return com.chua.starter.ai.support.model.OcrResult.success(fullText, textLines, System.currentTimeMillis() - startTime);
         } catch (Exception e) {
-            log.error("OCR failed", e);
-            return OcrResult.fail(e.getMessage());
+            log.error("[AI][OCR]识别失败", e);
+            return com.chua.starter.ai.support.model.OcrResult.fail(e.getMessage());
         }
     }
 
     /**
-     * 转换检测结果为文本行列表
+     * 转换OCR结果为文本行列表
+     *
+     * @param results OCR识别结果列表
+     * @return 文本行列表
      */
-    private List<OcrResult.TextLine> convertToTextLines(PredictResultObject<PredictResult> result) {
-        if (result == null || result.isEmpty()) {
+    private List<com.chua.starter.ai.support.model.OcrResult.TextLine> convertToTextLines(List<OcrResult> results) {
+        if (results == null || results.isEmpty()) {
             return Collections.emptyList();
         }
 
-        List<OcrResult.TextLine> textLines = new ArrayList<>();
-        for (PredictResult predictResult : result.getList()) {
-            if (predictResult instanceof LabelPredictResult labelResult) {
-                textLines.add(OcrResult.TextLine.builder()
-                        .text(labelResult.asString())
-                        .confidence((float) labelResult.getConfidence())
-                        .build());
-            }
+        List<com.chua.starter.ai.support.model.OcrResult.TextLine> textLines = new ArrayList<>();
+        for (var ocrResult : results) {
+            textLines.add(com.chua.starter.ai.support.model.OcrResult.TextLine.builder()
+                    .text(ocrResult.getText())
+                    .confidence(ocrResult.getConfidence())
+                    .build());
         }
         return textLines;
     }
 
     @Override
-    public OcrResult ocr(File imageFile) {
+    public com.chua.starter.ai.support.model.OcrResult ocr(File imageFile) {
         try {
-            byte[] imageData = Files.readAllBytes(imageFile.toPath());
+            var imageData = Files.readAllBytes(imageFile.toPath());
             return ocr(imageData);
         } catch (IOException e) {
-            log.error("Failed to read image file: {}", imageFile.getAbsolutePath(), e);
-            return OcrResult.fail("Failed to read image file: " + e.getMessage());
+            log.error("[AI][OCR]读取文件失败: {}", imageFile.getAbsolutePath(), e);
+            return com.chua.starter.ai.support.model.OcrResult.fail("Failed to read image file: " + e.getMessage());
         }
     }
 
     @Override
-    public OcrResult ocr(InputStream inputStream) {
+    public com.chua.starter.ai.support.model.OcrResult ocr(InputStream inputStream) {
         try {
-            byte[] imageData = toByteArray(inputStream);
+            var imageData = toByteArray(inputStream);
             return ocr(imageData);
         } catch (IOException e) {
-            log.error("Failed to read image from input stream", e);
-            return OcrResult.fail("Failed to read image from input stream: " + e.getMessage());
+            log.error("[AI][OCR]读取输入流失败", e);
+            return com.chua.starter.ai.support.model.OcrResult.fail("Failed to read image from input stream: " + e.getMessage());
         }
     }
 
@@ -507,25 +612,28 @@ public class DefaultAiService implements AiService {
             return LayoutAnalysisResult.fail("AI module is disabled");
         }
 
-        long startTime = System.currentTimeMillis();
+        var startTime = System.currentTimeMillis();
         try {
-            Detector detector = getLayoutDetector();
+            var detector = getLayoutDetector();
             if (detector == null) {
                 return LayoutAnalysisResult.fail("LayoutDetector not available");
             }
 
-            PredictResultObject<PredictResult> result = detector.predict(imageData);
-            List<LayoutAnalysisResult.LayoutElement> elements = convertToLayoutElements(result);
+            var result = detector.detect(imageData);
+            var elements = convertToLayoutElements(result);
             
             return LayoutAnalysisResult.success(elements, System.currentTimeMillis() - startTime);
         } catch (Exception e) {
-            log.error("Layout analysis failed", e);
+            log.error("[AI][版面分析]分析失败", e);
             return LayoutAnalysisResult.fail(e.getMessage());
         }
     }
 
     /**
      * 转换检测结果为版面元素列表
+     *
+     * @param result 预测结果
+     * @return 版面元素列表
      */
     private List<LayoutAnalysisResult.LayoutElement> convertToLayoutElements(PredictResultObject<PredictResult> result) {
         if (result == null || result.isEmpty()) {
@@ -533,13 +641,13 @@ public class DefaultAiService implements AiService {
         }
 
         List<LayoutAnalysisResult.LayoutElement> elements = new ArrayList<>();
-        int order = 0;
-        for (PredictResult predictResult : result.getList()) {
+        var order = 0;
+        for (var predictResult : result.getList()) {
             if (predictResult instanceof DetectorPredictResult detectorResult) {
                 var boundingBox = detectorResult.getBoundingBox();
                 if (boundingBox != null && boundingBox.getCorners() != null && !boundingBox.getCorners().isEmpty()) {
-                    var topLeft = boundingBox.getCorners().get(0);
-                    LayoutAnalysisResult.ElementType type = parseElementType(detectorResult.getClassId());
+                    var topLeft = boundingBox.getCorners().getFirst();
+                    var type = parseElementType(detectorResult.getClassId());
                     
                     elements.add(LayoutAnalysisResult.LayoutElement.builder()
                             .type(type)
@@ -557,7 +665,10 @@ public class DefaultAiService implements AiService {
     }
 
     /**
-     * 解析元素类型
+     * 解析版面元素类型
+     *
+     * @param classId 类别标识
+     * @return 元素类型枚举
      */
     private LayoutAnalysisResult.ElementType parseElementType(String classId) {
         if (classId == null) {
@@ -579,19 +690,26 @@ public class DefaultAiService implements AiService {
     @Override
     public LayoutAnalysisResult analyzeLayout(File imageFile) {
         try {
-            byte[] imageData = Files.readAllBytes(imageFile.toPath());
+            var imageData = Files.readAllBytes(imageFile.toPath());
             return analyzeLayout(imageData);
         } catch (IOException e) {
-            log.error("Failed to read image file: {}", imageFile.getAbsolutePath(), e);
+            log.error("[AI][版面分析]读取文件失败: {}", imageFile.getAbsolutePath(), e);
             return LayoutAnalysisResult.fail("Failed to read image file: " + e.getMessage());
         }
     }
 
     // ==================== 辅助方法 ====================
 
+    /**
+     * 将输入流转换为字节数组
+     *
+     * @param inputStream 输入流
+     * @return 字节数组
+     * @throws IOException IO异常
+     */
     private byte[] toByteArray(InputStream inputStream) throws IOException {
-        ByteArrayOutputStream baos = new ByteArrayOutputStream();
-        byte[] buffer = new byte[4096];
+        var baos = new ByteArrayOutputStream();
+        var buffer = new byte[4096];
         int bytesRead;
         while ((bytesRead = inputStream.read(buffer)) != -1) {
             baos.write(buffer, 0, bytesRead);
